# rust-melbourne-graphql-todo

./: .gitignore  Cargo.toml  docker-compose.dev.yaml  docker-compose.prod.yaml
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/entity/: Cargo.toml
crates/graphql/: Cargo.toml
crates/graphql/src/: lib.rs  user.rs
crates/migration/: Cargo.toml
src/: main.rs
