[package]
name = "rust-melbourne-graphql-todo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bin"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.7" }
async-graphql-axum = "5.0.7"
axum = { version = "0.6.17", features = ["ws", "headers"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
graphql = { path = "./crates/graphql" }

[workspace]
members = [".", "crates/*"]
