[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
graph = "0.3.0"
petgraph = "0.6.3"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
uuid = { version = "1.3.2", features = ["v4"] }
