[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.7" }
database = { path = "../database" }
rand = "0.8.5"
uuid = { version = "1.3.2", features = ["v4"] }
