[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.7" }
database = { path = "../database" }
futures = "0.3.28"
rand = "0.8.5"
tokio = "1.28.0"
tokio-stream = "0.1.14"
